--- a/style.css
+++ b/style.css
@@ -933,6 +933,33 @@ footer{
     margin-left: 0;
 }
 
+                            /* **** Error **** */
+
+.error403{
+    background-color: #2A2558;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}    
+
+.error404{
+    background-color: #2A2558;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    flex-direction: column;
+}    
+
+.error404 .btn{
+    background-color: #7D67A9;
+}                            
+
 
 
                             /* *** Responsive *** */
