--- a/style.css
+++ b/style.css
@@ -929,6 +929,24 @@ footer{
     height: 100%;
     width: 90%;
 }
+
+.galerie{
+    width: 100%;
+    height: 500px;
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.contentgalerie{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    margin-top: 20px;
+}
+
+.imagegal img{
+    width: 100px;
+}
 .contentshow3 .btnback2{
     margin-left: 0;
 }
