--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ html,body{
     font-family: "Rajdhani", sans-serif;
     scroll-behavior: smooth;
     width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .slide{
@@ -673,6 +675,8 @@ hr{
     transition: all 1s;
 }
 
+
+
 footer{
     background-color: #443471;
     height: 270px;
@@ -816,7 +820,7 @@ footer{
 }
 
 .contentworks2{
-    /* background-color: #DFCDDC; */
+    background-color: #DFCDDC;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -828,7 +832,6 @@ footer{
     justify-content: center;
     align-items: center;
     background-color: #564294;
-
 }
 .contentshow{
     width: 90%;
@@ -866,8 +869,8 @@ footer{
     margin-bottom: 50px;
 }
 .swiper {
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
   }
 
   .swiper-slide {
