--- a/style.css
+++ b/style.css
@@ -130,7 +130,6 @@ nav{
     width: 100%;
     display: flex;
     justify-content: space-around;
-    overflow: hidden;
     position: fixed;
     align-items: center;
     z-index: 200;
@@ -820,7 +819,7 @@ footer{
 }
 
 .contentworks2{
-    background-color: #DFCDDC;
+    /* background-color: #DFCDDC; */
     width: 100%;
     display: flex;
     justify-content: center;
@@ -1029,23 +1028,23 @@ footer{
     }
     .contentshow{
         width: 90%;
-        height: 900px;
+        /* height: 900px; */
         margin-top: 100px;
     }
     .contentshow2{
         width: 50%;
-        height: 100%;
+        /* height: 100%; */
     }
     
     
     .contentshowimg{
-        height: 85%;
+        /* height: 85%; */
     }
     
     
     .contentshow3{
         width: 45%;
-        height: 85%;
+        /* height: 85%; */
     }
 }  
 
