--- a/style.css
+++ b/style.css
@@ -36,12 +36,10 @@
 }
 
 html,body{
-    height: 100%;
     font-family: "Rajdhani", sans-serif;
     scroll-behavior: smooth;
     width: 100%;
-    display: flex;
-    flex-direction: column;
+   
 }
 
 .slide{
@@ -870,12 +868,12 @@ footer{
 .swiper {
     width: 90%;
     height: 90%;
+    background: #ff0000;
   }
 
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1558,6 +1556,10 @@ footer{
     }
     .video{
         height: 60%;
+    }
+
+    .footerinfo{
+        width: 80%;
     }
 }
 
