--- a/style.css
+++ b/style.css
@@ -832,11 +832,13 @@ footer{
 }
 .contentshow{
     width: 90%;
-    height: 1100px;
+    height: 90vh;
     margin-top: 100px;
     display: flex;
     justify-content: space-between;
     transition: all 1s;
+    /* background-color: #8678ff; */
+    overflow: hidden;
 }
 .contentshow2{
     width: 50%;
@@ -844,8 +846,10 @@ footer{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    margin-top: 50px;
     margin-bottom: 50px;
     transition: all 1s;
+    /* background-color: #DFCDDC; */
 }
 .contentshow2 h1{
     color: white;
@@ -855,20 +859,18 @@ footer{
 
 .contentshowimg{
     width: 100%;
-    height: 90%;
+    height: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
-    background-color: #2b00ff;
     border-top: solid 1px white;
     border-bottom: solid 1px white;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
+    transition: all 1s;
 }
 .swiper {
     width: 90%;
     height: 90%;
-    background: #ff0000;
   }
 
   .swiper-slide {
@@ -902,13 +904,15 @@ footer{
 }
 
 .contentshow3{
-    width: 45%;
+    width: 50%;
+    height: 90%;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
-    height: 85%;
-    align-self: flex-end;
+    flex-direction: column;
+    margin-top: 50px;
     margin-bottom: 50px;
+    transition: all 1s;
+    /* background-color: #DFCDDC; */
 }
 
 .date{
@@ -966,7 +970,7 @@ footer{
     font-weight: 300;
     margin-top: 20px;
     height: 100%;
-    width: 90%;
+    width: 100%;
 }
 .contentshow3 .btnback2{
     margin-left: 0;
@@ -1026,17 +1030,14 @@ footer{
     }
     .contentshow{
         width: 90%;
-        /* height: 900px; */
         margin-top: 100px;
     }
     .contentshow2{
         width: 50%;
-        /* height: 100%; */
     }
        
     .contentshow3{
         width: 45%;
-        /* height: 85%; */
     }
 }  
 
@@ -1150,8 +1151,9 @@ footer{
     footer{
         height: 250px;
     }
-    .contentshow{
-        height: 800px;
+
+    .contentshowimg{
+        height: 70%;
     }
 }
 
@@ -1170,12 +1172,12 @@ footer{
     }
     .contentshow{
         width: 80%;
-        height: 1800px;
+        height: 100%;
         flex-direction: column;
     }
     .contentshow2{
         width: 100%;
-        height: 70%;
+        height: 100%;
     }
     
     .contentshowimg{
@@ -1186,7 +1188,7 @@ footer{
     
     .contentshow3{
         width: 100%;
-        height: 50%;
+        height: 100%;
     }
     .video{
         height: 70%;
