--- a/style.css
+++ b/style.css
@@ -585,11 +585,10 @@ hr{
 .contentcontact{
     width: 50%;
     height: 750px;
-    margin-top: 100px;
+    margin-top: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-bottom: 80px;
     transition: all 1s;
 }
 
@@ -597,7 +596,6 @@ hr{
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
     height: 100%;
     /* background-color: #332868; */
@@ -614,6 +612,7 @@ hr{
     padding: 10px;
     transition: all 1s;
     font-family: "Rajdhani", sans-serif;
+    margin-top: 100px;
 }
 
 .contentcontact input::placeholder{
@@ -633,6 +632,8 @@ hr{
     padding: 10px;
     transition: all 1s;
     font-family: "Rajdhani", sans-serif;
+    margin-top: 100px;
+    
 }
 
 .contentcontact textarea::placeholder{
@@ -657,6 +658,7 @@ hr{
 .btn-send{
     align-self: center;
     width: 220px;
+    margin-top: 30px;
 }
 
 #btn-success{
@@ -667,6 +669,8 @@ hr{
     border-right: rgba(255, 255, 255, 0); 
     font-weight: 700;
     font-family: "Rajdhani", sans-serif;
+    height: 90%;
+    margin-top: 0px;
 }
 
 .success{
@@ -1482,7 +1486,6 @@ footer{
         width: 85%;
     }
     
-    
     .contentcontact form{
         align-items: center;
     }
@@ -1491,18 +1494,19 @@ footer{
         width: 100%;
         height: 40px;
         font-size: 20px;
+        margin-top: 50px;
     }
     .contentcontact textarea{
         width: 100%;
         height: 200px;
         font-size: 20px;
         padding: 10px;
+        margin-top: 50px;
     }
     
     .nom{
         flex-direction: column;
         width: 98%;
-        height: 180px;
         align-items: center;
     }
     
@@ -1670,16 +1674,13 @@ footer{
         margin-top: 0px;
     }
     .contentcontact form{
-        height: 80%;
+        height: 90%;
     }
     
     .contentcontact input{
         height: 35px;
     }
     
-    .nom{
-        height: 150px;
-    }
 
 }
 
@@ -1793,6 +1794,10 @@ footer{
         font-size: 16px;
 
     }
+
+    #contact{
+        min-height: 60vh;
+    }
     
     #contact h1{
         font-size: 24px;
@@ -1807,7 +1812,7 @@ footer{
         margin-top: -20px;
     }
     .contentcontact form{
-        height: 70%;
+        height: 90%;
     }
     
     .contentcontact input{
@@ -1823,7 +1828,6 @@ footer{
     
     .nom{
         width: 98%;
-        height: 130px;
     }
 
     .btn-send{
