--- a/style.css
+++ b/style.css
@@ -947,6 +947,19 @@ footer{
     justify-content: space-around;
 }
 
+#contentdateweb{
+    height: 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    /* background-color: #d3c4ff; */
+    margin-top: 100px;
+}
+
+#contentshowweb{
+    width: 40%;
+}
+
 .date{
     color: white;
     font-size: 20px;
@@ -976,12 +989,15 @@ footer{
     color: white;
     font-size: 20px;
     font-weight: 700;
+    display: flex;
+    /* background-color: #7D67A9; */
+    align-items: center;
 }
 
 .url div{
     font-size: 16px;
     font-weight: 300;
-    margin-top: 20px;
+    margin-left: 20px;
 }
 
 .url div a{
@@ -1243,6 +1259,11 @@ footer{
         min-height: 200vh;
         flex-direction: column;
     }
+
+    #contentweb{
+        min-height: 160vh;
+
+    }
     .contentshow2{
         width: 100%;
         min-height: 80vh;
@@ -1274,6 +1295,21 @@ footer{
 
     #contentshowillu{
         min-height: 150vh;
+    }
+
+    #contentdateweb{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        /* background-color: #d3c4ff; */
+        margin-top: 0px;
+        height: 80%;
+    }
+    
+    #contentshowweb{
+        width: 100%;
+        min-height: 60vh;
+        margin-top: 0;
     }
 
 }
@@ -1618,7 +1654,17 @@ footer{
     #contentshowillu{
         min-height: 120vh;
     }
+    #contentshowweb{
+        min-height: 50vh;
+    }
+    #contentdateweb{
+        height: 80%;
+    }
+    #contentweb{
+        min-height: 120vh;
+    }
 }
+
 
 @media all and (max-width: 630px)
 {
@@ -1877,6 +1923,15 @@ footer{
     }
     #contentillu{
         height: 50%;
+    }
+    #contentshowweb{
+        min-height: 20vh;
+    }
+    #contentdateweb{
+        height: 80%;
+    }
+    #contentweb{
+        min-height: 80vh;
     }
 
 }
