--- a/style.css
+++ b/style.css
@@ -1256,7 +1256,7 @@ footer{
     }
     .contentshow{
         width: 80%;
-        min-height: 200vh;
+        height: 2200px;
         flex-direction: column;
     }
 
@@ -1267,6 +1267,7 @@ footer{
     .contentshow2{
         width: 100%;
         min-height: 80vh;
+        margin-bottom: 0;
     }
     .contentshow2 h1{
         margin-top: 0px;
@@ -1294,14 +1295,13 @@ footer{
     }
 
     #contentshowillu{
-        min-height: 150vh;
+        height: 1700px;
     }
 
     #contentdateweb{
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        /* background-color: #d3c4ff; */
         margin-top: 0px;
         height: 80%;
     }
@@ -1608,7 +1608,7 @@ footer{
     }
 
     .contentshow{
-        min-height: 150vh;
+        height: 1700px;
     }
     .contentshow2{
         min-height: 50vh;
@@ -1652,7 +1652,7 @@ footer{
         font-size: 30px;
     }
     #contentshowillu{
-        min-height: 120vh;
+        height: 1200px;
     }
     #contentshowweb{
         min-height: 50vh;
@@ -1737,16 +1737,16 @@ footer{
         height: 230px;
     }
     .contentshow{
-        min-height: 150vh;
+        height: 1400px;
     }
     .contentshow2{
-        min-height: 40vh;
+        min-height: 50vh;
     }
     .contentshow3{
         min-height: 40vh;
     }
     #contentshowillu{
-        min-height: 100vh;
+       height: 1100px;
     }
 
 }
@@ -1881,11 +1881,20 @@ footer{
     }
 
     .contentshow{
-        height: 1100px;
+        height: 1200px;
     }
     .contentshow2 h1{
         font-size: 24px;
     }
+
+    .contentshow2{
+        min-height: 42vh;
+    }
+
+    #contentshowillu{
+        height: 1100px;
+     }
+ 
 }
 
 @media all and (max-width: 360px)
@@ -1917,9 +1926,6 @@ footer{
     }
     .mentions h1{
         font-size: 24px;
-    }
-    #contentshowillu{
-        min-height: 90vh;
     }
     #contentillu{
         height: 50%;
