--- a/style.css
+++ b/style.css
@@ -1030,6 +1030,59 @@ footer{
     color: white;
 }
 
+                            /* **** Pictures **** */
+
+.contentpicture{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    color: white;
+    min-height: 100vh;
+    flex-direction: column;
+}    
+.contentpicture h1{
+    font-size: 40px;
+    margin-top: 100px;
+}
+
+.contentgalerie{
+    width: 80%;
+    height: 80%;
+    /* background-color: #aa8eff; */
+    margin-top: 100px;
+    border: solid 2px rgb(166, 251, 255);
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(3,1fr);
+    gap: 50px;
+    padding: 50px;
+
+}
+
+.contentgalerie div{
+    width: 450px;
+    height: 300px;
+    background-color: #DFCDDC;
+    place-self: center;
+    transition: all 1s;
+}
+
+.contentgalerie img{
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: grayscale(100);
+    transition: all 1s;
+}
+
+.contentgalerie img:hover{
+    filter: grayscale(0);
+}
+
+
+
                             /* **** Error **** */
 
 .error403{
@@ -1117,7 +1170,7 @@ footer{
     } 
     .contentcontact{
         width: 50%;
-    }
+    }   
        
 }  
 
@@ -1146,6 +1199,19 @@ footer{
     .contentcontact{
         width: 60%;
     }
+
+    .contentgalerie{
+        width: 90%;
+        height: 100%;
+        align-items: center;
+        grid-template-columns: repeat(3,1fr);
+    }
+    
+    .contentgalerie div{
+        width: 400px;
+        height: 250px;
+    }
+    
 }   
 
 @media all and (max-width: 1780px)
@@ -1238,6 +1304,17 @@ footer{
 
     .contentshowimg{
         height: 70%;
+    }
+    .contentgalerie{
+        width: 90%;
+        height: 100%;
+        align-items: center;
+        grid-template-columns: repeat(2,1fr);
+    }
+    
+    .contentgalerie div{
+        width: 450px;
+        height: 300px;
     }
 }
 
