--- a/style.css
+++ b/style.css
@@ -1305,10 +1305,10 @@ footer{
     .contentshowimg{
         height: 70%;
     }
+
     .contentgalerie{
-        width: 90%;
+        width: 80%;
         height: 100%;
-        align-items: center;
         grid-template-columns: repeat(2,1fr);
     }
     
@@ -1419,6 +1419,17 @@ footer{
     }
     .contentcontact{
         width: 90%;
+    }
+
+    .contentgalerie{
+        width: 80%;
+        height: 100%;
+        grid-template-columns: repeat(1,1fr);
+    }
+    
+    .contentgalerie div{
+        width: 450px;
+        height: 300px;
     }
    
 
@@ -1779,6 +1790,13 @@ footer{
     .mentions p{
         margin-bottom: 10px;
     }
+    .contentgalerie{
+        width: 70%;
+    }
+    .contentgalerie div{
+        width: 400px;
+        height: 250px;
+    }
 }
 
 @media all and (max-width: 560px)
@@ -1803,6 +1821,11 @@ footer{
     .contentcontact input{
         height: 35px;
     }
+
+    .contentgalerie div{
+        width: 350px;
+        height: 250px;
+    }
     
 
 }
@@ -1825,6 +1848,11 @@ footer{
     #contentshowillu{
        height: 1100px;
     }
+    .contentgalerie div{
+        width: 300px;
+        height: 200px;
+    }
+    
 
 }
 
@@ -1971,6 +1999,16 @@ footer{
     #contentshowillu{
         height: 1100px;
      }
+
+     .contentgalerie{
+        width: 65%;
+     }
+
+     .contentgalerie div{
+        width: 250px;
+        height: 150px;
+    }
+    
  
 }
 
@@ -1983,6 +2021,14 @@ footer{
 
     #livres{
         display: none;
+    }
+    .contentgalerie{
+        width: 60%;
+     }
+
+     .contentgalerie div{
+        width: 200px;
+        height: 100px;
     }
 }
 
@@ -2015,6 +2061,14 @@ footer{
     }
     #contentweb{
         min-height: 80vh;
+    }
+    .contentgalerie{
+        width: 50%;
+     }
+
+     .contentgalerie div{
+        width: 150px;
+        height: 100px;
     }
 
 }
